# alphazero-othello

./: .gitignore  LICENSE  README.md  az.py  demo.ipynb  pyproject.toml  slides.tex
figures/: win_rate_vs_random.pgf
