[tool.poetry]
name = "az"
version = "0.1.0"
description = ""
authors = ["PythonNut <PythonNut@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = {url = "https://download.pytorch.org/whl/nightly/cu110/torch-1.8.0.dev20201203%2Bcu110-cp39-cp39-linux_x86_64.whl"}
matplotlib = "^3.3.3"
tensorboardX = "^2.1"
tqdm = "^4.54.1"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
jupyter = "^1.0.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
